--- a/Scatter Plot/2 Frequency Scatter Plot.ipynb
+++ b/Scatter Plot/2 Frequency Scatter Plot.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,177 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'GAGGUAG': 21,\n",
-       " 'GGAAUGU': 4,\n",
-       " 'GGAAGAC': 5,\n",
-       " 'AAUACUG': 4,\n",
-       " 'AACACUG': 2,\n",
-       " 'CUUUGGU': 7,\n",
-       " 'ACCCUGU': 5,\n",
-       " 'CCCUGUA': 5,\n",
-       " 'ACCCGUA': 4,\n",
-       " 'CCCUGAG': 6,\n",
-       " 'AGCAGCA': 8,\n",
-       " 'AGCAGCG': 1,\n",
-       " 'CCAAUAU': 1,\n",
-       " 'CCAGUAU': 1,\n",
-       " 'AAAGUGC': 6,\n",
-       " 'AAGGUGC': 3,\n",
-       " 'GUGCAAA': 6,\n",
-       " 'AGCUUAU': 2,\n",
-       " 'AGCUGCC': 3,\n",
-       " 'UCACAUU': 5,\n",
-       " 'GGCUCAG': 5,\n",
-       " 'UCAAGUA': 4,\n",
-       " 'UCACAGU': 5,\n",
-       " 'AGCACCA': 4,\n",
-       " 'CUGAAUU': 1,\n",
-       " 'GUAAACA': 7,\n",
-       " 'GGCAAGA': 1,\n",
-       " 'AAUGUUC': 1,\n",
-       " 'GGCAGUG': 3,\n",
-       " 'AUUGCAC': 5,\n",
-       " 'UUGGCAC': 1,\n",
-       " 'UUGGCAA': 1,\n",
-       " 'AUGGCAC': 1,\n",
-       " 'UGGCACU': 1,\n",
-       " 'ACAGUAC': 2,\n",
-       " 'UACAGUA': 3,\n",
-       " 'GCAGCAU': 4,\n",
-       " 'GGAGUGU': 1,\n",
-       " 'AAGGCAC': 6,\n",
-       " 'UAAGGCA': 6,\n",
-       " 'CGUACCG': 2,\n",
-       " 'AUUAUUA': 2,\n",
-       " 'UCGUACC': 2,\n",
-       " 'CACAGUG': 3,\n",
-       " 'UUUUUGC': 4,\n",
-       " 'AGUGCAA': 8,\n",
-       " 'CUUUGAC': 1,\n",
-       " 'AACAGUC': 4,\n",
-       " 'CCUUGGC': 2,\n",
-       " 'UUGGUCC': 4,\n",
-       " 'UGGUCCC': 4,\n",
-       " 'AUGGCUU': 4,\n",
-       " 'UAUUGCU': 2,\n",
-       " 'AUUGCUU': 2,\n",
-       " 'GCUGGUG': 2,\n",
-       " 'CUACAGU': 1,\n",
-       " 'CCACAGG': 1,\n",
-       " 'ACCACAG': 1,\n",
-       " 'AUAAAGU': 3,\n",
-       " 'UAGUGUU': 2,\n",
-       " 'GUAGUGU': 2,\n",
-       " 'CCAUAAA': 1,\n",
-       " 'GAGAUGA': 1,\n",
-       " 'ACAGUAU': 1,\n",
-       " 'UCCAGUU': 1,\n",
-       " 'GAGAACU': 2,\n",
-       " 'UGAGAAC': 1,\n",
-       " 'CAGUGCA': 2,\n",
-       " 'CUCCCAA': 1,\n",
-       " 'UGCAUAG': 2,\n",
-       " 'UCAUUUU': 1,\n",
-       " 'UAAUGCU': 1,\n",
-       " 'ACAUUCA': 10,\n",
-       " 'GGACGGA': 2,\n",
-       " 'CGUGUCU': 1,\n",
-       " 'GAUAUGU': 2,\n",
-       " 'AACGGAA': 1,\n",
-       " 'UGACCUA': 1,\n",
-       " 'ACUGGCC': 3,\n",
-       " 'AAUGCCC': 3,\n",
-       " 'GUAACAG': 2,\n",
-       " 'AGGUAGU': 5,\n",
-       " 'CAGUAGU': 4,\n",
-       " 'ACAGUAG': 4,\n",
-       " 'AGUAGUC': 4,\n",
-       " 'UCCUAUG': 1,\n",
-       " 'UGAAAUG': 2,\n",
-       " 'GAAAUGU': 2,\n",
-       " 'UCCCUUU': 3,\n",
-       " 'CCUUCAU': 1,\n",
-       " 'UAAGACG': 1,\n",
-       " 'UGUGCGU': 1,\n",
-       " 'CAGCAGG': 1,\n",
-       " 'ACAGCAG': 1,\n",
-       " 'AAUCUCU': 1,\n",
-       " 'AAUCUCA': 1,\n",
-       " 'ACUGCAU': 1,\n",
-       " 'UACUGCA': 1,\n",
-       " 'UGUGCUU': 3,\n",
-       " 'CACAUGG': 1,\n",
-       " 'GAUUGUC': 3,\n",
-       " 'GAAUUGU': 2,\n",
-       " 'GAGUUGU': 1,\n",
-       " 'GCUCAGU': 1,\n",
-       " 'GCUACAU': 4,\n",
-       " 'GUCAGUU': 1,\n",
-       " 'CCAGCAU': 3,\n",
-       " 'UUGUUCG': 2,\n",
-       " 'AUGACAC': 1,\n",
-       " 'AAGUGCU': 55,\n",
-       " 'CCCUCAC': 3,\n",
-       " 'AACCGUU': 1,\n",
-       " 'AUGUGCC': 2,\n",
-       " 'AGGCUGG': 1,\n",
-       " 'UAGCUCU': 1,\n",
-       " 'CAGUAAC': 1,\n",
-       " 'ACAGCGC': 1,\n",
-       " 'CCUCAUU': 1,\n",
-       " 'UGACAUC': 1,\n",
-       " 'GACAUCA': 2,\n",
-       " 'UAAGACU': 2,\n",
-       " 'CGACCCA': 1,\n",
-       " 'UUUGCAG': 2,\n",
-       " 'UUGCAGA': 2,\n",
-       " 'UAAAGGG': 2,\n",
-       " 'AAAGGGA': 2,\n",
-       " 'UCAGUCA': 1,\n",
-       " 'UCACUAC': 1,\n",
-       " 'CAGUCUU': 1,\n",
-       " 'UUGAGGC': 1,\n",
-       " 'UACUAAG': 1,\n",
-       " 'AUGGGUA': 1,\n",
-       " 'UCAAAGC': 1,\n",
-       " 'AAAUGCU': 1,\n",
-       " 'UUUUUUU': 1,\n",
-       " 'CACCUCC': 1,\n",
-       " 'UCUCAGG': 1,\n",
-       " 'GCUUGUU': 1,\n",
-       " 'AGGCAGC': 1,\n",
-       " 'ACAGUAA': 2,\n",
-       " 'AGGUCCA': 1,\n",
-       " 'GAUUGUU': 1,\n",
-       " 'CACACCU': 1,\n",
-       " 'ACUUGGU': 1,\n",
-       " 'AGUUUGA': 1,\n",
-       " 'GUACCAU': 1,\n",
-       " 'AUGGAAA': 1,\n",
-       " 'UCCAAGU': 1,\n",
-       " 'AUUUUCU': 1,\n",
-       " 'UAUGUGU': 1,\n",
-       " 'CUGAUCA': 1,\n",
-       " 'CAGGAAU': 1,\n",
-       " 'GCUGUGG': 1,\n",
-       " 'CAUGUCA': 1,\n",
-       " 'ACAAGGG': 1,\n",
-       " 'GGGCGAU': 1,\n",
-       " 'UGGUAUC': 1,\n",
-       " 'AAAUAAU': 1}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "def makeSeedDict(filename):\n",
@@ -288,7 +120,6 @@
     "        for key in count.keys():\n",
     "            csvfile.write(\"%s, %s\\n\" % (key, count[key]))\n",
     "    \n",
-    "    return count\n",
     "makeSeedDict(\"dre_mature_seeds\")"
    ]
   },
@@ -301,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,177 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'CUACCUC': '590',\n",
-       " 'ACAUUCC': '1537',\n",
-       " 'GUCUUCC': '830',\n",
-       " 'CAGUAUU': '3621',\n",
-       " 'CAGUGUU': '4223',\n",
-       " 'ACCAAAG': '1731',\n",
-       " 'ACAGGGU': '1085',\n",
-       " 'UACAGGG': '854',\n",
-       " 'UACGGGU': '189',\n",
-       " 'CUCAGGG': '824',\n",
-       " 'UGCUGCU': '3337',\n",
-       " 'CGCUGCU': '772',\n",
-       " 'AUAUUGG': '1687',\n",
-       " 'AUACUGG': '1098',\n",
-       " 'GCACUUU': '3040',\n",
-       " 'GCACCUU': '1027',\n",
-       " 'UUUGCAC': '3051',\n",
-       " 'AUAAGCU': '1561',\n",
-       " 'GGCAGCU': '827',\n",
-       " 'AAUGUGA': '4336',\n",
-       " 'CUGAGCC': '1060',\n",
-       " 'UACUUGA': '2037',\n",
-       " 'ACUGUGA': '3169',\n",
-       " 'UGGUGCU': '1686',\n",
-       " 'AAUUCAG': '2679',\n",
-       " 'UGUUUAC': '4809',\n",
-       " 'UCUUGCC': '813',\n",
-       " 'GAACAUU': '3040',\n",
-       " 'CACUGCC': '1219',\n",
-       " 'GUGCAAU': '1894',\n",
-       " 'GUGCCAA': '1294',\n",
-       " 'UUGCCAA': '1781',\n",
-       " 'GUGCCAU': '1408',\n",
-       " 'AGUGCCA': '1280',\n",
-       " 'GUACUGU': '2585',\n",
-       " 'UACUGUA': '5421',\n",
-       " 'AUGCUGC': '1962',\n",
-       " 'ACACUCC': '1154',\n",
-       " 'GUGCCUU': '1657',\n",
-       " 'UGCCUUA': '1761',\n",
-       " 'CGGUACG': '110',\n",
-       " 'UAAUAAU': '9239',\n",
-       " 'GGUACGA': '167',\n",
-       " 'CACUGUG': '2763',\n",
-       " 'GCAAAAA': '3917',\n",
-       " 'UUGCACU': '2609',\n",
-       " 'GUCAAAG': '1503',\n",
-       " 'GACUGUU': '2350',\n",
-       " 'GCCAAGG': '433',\n",
-       " 'GGACCAA': '1061',\n",
-       " 'GGGACCA': '566',\n",
-       " 'AAGCCAU': '1667',\n",
-       " 'AGCAAUA': '1978',\n",
-       " 'AAGCAAU': '2206',\n",
-       " 'CACCAGC': '1232',\n",
-       " 'ACUGUAG': '2195',\n",
-       " 'CCUGUGG': '1008',\n",
-       " 'CUGUGGU': '2134',\n",
-       " 'ACUUUAU': '4424',\n",
-       " 'AACACUA': '2517',\n",
-       " 'ACACUAC': '1839',\n",
-       " 'UUUAUGG': '2516',\n",
-       " 'UCAUCUC': '1861',\n",
-       " 'AUACUGU': '3818',\n",
-       " 'AACUGGA': '1984',\n",
-       " 'AGUUCUC': '1114',\n",
-       " 'GUUCUCA': '1435',\n",
-       " 'UGCACUG': '2861',\n",
-       " 'UUGGGAG': '886',\n",
-       " 'CUAUGCA': '1325',\n",
-       " 'AAAAUGA': '8232',\n",
-       " 'AGCAUUA': '2275',\n",
-       " 'UGAAUGU': '5610',\n",
-       " 'UCCGUCC': '435',\n",
-       " 'AGACACG': '568',\n",
-       " 'ACAUAUC': '1318',\n",
-       " 'UUCCGUU': '702',\n",
-       " 'UAGGUCA': '820',\n",
-       " 'GGCCAGU': '851',\n",
-       " 'GGGCAUU': '772',\n",
-       " 'CUGUUAC': '1677',\n",
-       " 'ACUACCU': '810',\n",
-       " 'ACUACUG': '1581',\n",
-       " 'CUACUGU': '1867',\n",
-       " 'GACUACU': '725',\n",
-       " 'CAUAGGA': '567',\n",
-       " 'CAUUUCA': '5061',\n",
-       " 'ACAUUUC': '4485',\n",
-       " 'AAAGGGA': '3025',\n",
-       " 'AUGAAGG': '1968',\n",
-       " 'CGUCUUA': '461',\n",
-       " 'ACGCACA': '1308',\n",
-       " 'CCUGCUG': '2010',\n",
-       " 'CUGCUGU': '3926',\n",
-       " 'AGAGAUU': '2375',\n",
-       " 'UGAGAUU': '2574',\n",
-       " 'AUGCAGU': '2849',\n",
-       " 'UGCAGUA': '2245',\n",
-       " 'AAGCACA': '2763',\n",
-       " 'CCAUGUG': '1363',\n",
-       " 'GACAAUC': '1029',\n",
-       " 'ACAAUUC': '1944',\n",
-       " 'ACAACUC': '1042',\n",
-       " 'ACUGAGC': '1476',\n",
-       " 'AUGUAGC': '1384',\n",
-       " 'AACUGAC': '1900',\n",
-       " 'AUGCUGG': '1770',\n",
-       " 'CGAACAA': '520',\n",
-       " 'GUGUCAU': '2023',\n",
-       " 'AGCACUU': '2506',\n",
-       " 'GUGAGGG': '809',\n",
-       " 'AACGGUU': '723',\n",
-       " 'GGCACAU': '904',\n",
-       " 'CCAGCCU': '1105',\n",
-       " 'AGAGCUA': '857',\n",
-       " 'GUUACUG': '1743',\n",
-       " 'GCGCUGU': '801',\n",
-       " 'AAUGAGG': '1682',\n",
-       " 'GAUGUCA': '2079',\n",
-       " 'UGAUGUC': '2187',\n",
-       " 'AGUCUUA': '1688',\n",
-       " 'UGGGUCG': '260',\n",
-       " 'CUGCAAA': '2754',\n",
-       " 'UCUGCAA': '1996',\n",
-       " 'CCCUUUA': '2429',\n",
-       " 'UCCCUUU': '2613',\n",
-       " 'UGACUGA': '3031',\n",
-       " 'GUAGUGA': '872',\n",
-       " 'AAGACUG': '2142',\n",
-       " 'GCCUCAA': '1021',\n",
-       " 'CUUAGUA': '660',\n",
-       " 'UACCCAU': '795',\n",
-       " 'GCUUUGA': '2066',\n",
-       " 'AGCAUUU': '4453',\n",
-       " 'AAAAAAA': '44774',\n",
-       " 'GGAGGUG': '756',\n",
-       " 'CCUGAGA': '919',\n",
-       " 'AACAAGC': '2119',\n",
-       " 'GCUGCCU': '873',\n",
-       " 'UUACUGU': '4506',\n",
-       " 'UGGACCU': '807',\n",
-       " 'AACAAUC': '1834',\n",
-       " 'AGGUGUG': '1855',\n",
-       " 'ACCAAGU': '969',\n",
-       " 'UCAAACU': '3235',\n",
-       " 'AUGGUAC': '795',\n",
-       " 'UUUCCAU': '3533',\n",
-       " 'ACUUGGA': '1110',\n",
-       " 'AGAAAAU': '5216',\n",
-       " 'ACACAUA': '3099',\n",
-       " 'UGAUCAG': '1915',\n",
-       " 'AUUCCUG': '1840',\n",
-       " 'CCACAGC': '1535',\n",
-       " 'UGACAUG': '2332',\n",
-       " 'CCCUUGU': '804',\n",
-       " 'AUCGCCC': '234',\n",
-       " 'GAUACCA': '596',\n",
-       " 'AUUAUUU': '10965'}"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
@@ -544,8 +207,6 @@
     "    with open(filename+' dict.csv', 'w') as csvfile:\n",
     "        for key in count.keys():\n",
     "            csvfile.write(\"%s, %s\\n\" % (key, count[key]))\n",
-    "    \n",
-    "    return count\n",
     "makeMatchDict(\"reverse_mature_seeds\")"
    ]
   },
@@ -572,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -596,8 +257,7 @@
     "g = sns.relplot(\n",
     "    data=sequence_data,\n",
     "    x=\"Seed Match abundance\", \n",
-    "    y=\"miRNA abundance\",\n",
-    "    palette=cmap)\n",
+    "    y=\"miRNA abundance\")\n",
     "plt.xscale('log', basex=2)\n",
     "plt.yscale('log', basey=2)\n",
     "\n",
